docs:add title and description and changes in responses
